CHANGELOG

>>BUILD 24.07.10
+ Added full German translation (by ToCraft).
+ Added beavers (with their spawn) and their drop (with its usage)
+ Added Janos Slynt's, Pycelle's and Melisandra's drop
+ Added new world type - Game of Thrones without fixed structures and characters, but with map.
+ Added one forgotten dirtPath:2 recipe
+ Added crafts for stone chest, sandstone chest and replaced the craft of reeds chest with new one.

* Improved mob selector for smoking, drinking, being robbed and being married.
* Improved sound and volume of a few animals
* Improved fixed structures system (more clear, optimized and stable)
* Improved road-to-settlemen's-gate system
* Improved roads & walls code
* Improved GUI opening code
* Improved unit costs
* Improved dragon and wikigen command tab completion
* Improved animal stats

* Optimized dragons, giants and ice creatures
* Optimized lots of client-size things

* Silver, gold, valyrian steel and different gems now has fixed prices world-wide.
* Midges and butterflies can't spawn in winter now
* Biome visit achievements and achievement shields now require more biomes and achievements.
* Moved zero coords of the world closer to Winterfell
* Rebalanced +alignment values for killing
* Returned sandstone chests, ice & obsidian stalactites to natural spawn
* Returned targaryen items, lannicter brooch and silver hand brooch to natural drop

* Fixed bug with Petyr Baelish and dagger. Now he can sell only one dagger, and if did this, won't drop dagger after death.
* Fixed bug with uncraftable crafting tables
* Fixed bug with lhazar spear crafting
* Fixed bug with labradorite cracked bricks crafting
* Fixed bug with North men spawning in Gift
* Fixed bug with no craft ice spear, ice bricks
* Fixed bug with shrykes', werewolves', ifekevrons' swimming ai.
* Fixed different bugs related to mobs and their frost/heat immune
* Fixed bug with dragon size
* Fixed bug with broken title system
* Fixed bug with caves under settelements